# sinkmuzik

./: Cargo.toml  main.toml
encoders/: mp3_hq.toml  mp3_lq.toml
src/: config.rs  file_structure.rs  log.rs  main.rs  opt_parser.rs
