[package]
name = "sinkmuzik"
description = "Simple music syncronization tool with on-fly conversion support"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "4.4.0"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.26"
walkdir = "2.3.2"
rayon = "1.5.1"